--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ dignissimos quibusdam voluptates,
 exercitationem reprhenderit eaque.</p>
 <div class="btn-box">
 <a href="#">Hire Me</a>
-<a href="n.html">Let's Talk</a>
+<a href="inb.html">Let's Talk</a>
 </div>
 </div>
 </section>
